--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Sample",
-  "version": "1.4.1",
+  "version": "1.5.1",
   "manifest_version": 2,
   "description": "Sample Chrome Extension",
   "content_scripts": [{
@@ -8,13 +8,7 @@
     "js": [
       "jquery-3.4.1.min.js",
       "jquery.easing.js",
-      "script.js"
-    ],
-    "html": [
-      "index.html"
-    ],
-    "css": [
-      "try.css"
+      "content.js"
     ]
   }]
 }
